--- a/resources/tools/testbed-setup/ansible/templates/topology_azure.j2
+++ b/resources/tools/testbed-setup/ansible/templates/topology_azure.j2
@@ -18,13 +18,13 @@ nodes:
     interfaces:
       port1:
         # tg_instance/p1 - 40GE port1 on Mellanox NIC.
-        mac_address: {{ tg_if1_mac }}
+        mac_address: "{{ tg_if1_mac | lower | replace('-',':') }}"
         pci_address: "0002:00:02.0"
         link: link1
         model: azure-mlx-40g
       port2:
         # tg_instance/p2 - 40GE port2 on Mellanox NIC.
-        mac_address: {{ tg_if2_mac }}
+        mac_address: "{{ tg_if2_mac | lower | replace('-',':') }}"
         pci_address: "0003:00:02.0"
         link: link2
         model: azure-mlx-40g
@@ -44,13 +44,13 @@ nodes:
     interfaces:
       port1:
         # dut1_instance/p1 - 40GE port1 on Mellanox NIC.
-        mac_address: {{ dut1_if1_mac }}
+        mac_address: "{{ dut1_if1_mac | lower | replace('-',':') }}"
         pci_address: "0002:00:02.0"
         link: link1
         model: azure-mlx-40g
       port2:
         # dut2_instance/p1 - 40GE port2 on Mellanox NIC.
-        mac_address: {{ dut1_if2_mac }}
+        mac_address: "{{ dut1_if2_mac | lower | replace('-',':') }}"
         pci_address: "0002:00:03.0"
         link: link21
         model: azure-mlx-40g
@@ -70,13 +70,13 @@ nodes:
     interfaces:
       port1:
         # dut1_instance/p1 - 40GE port1 on Mellanox NIC.
-        mac_address: {{ dut2_if1_mac }}
+        mac_address: "{{ dut2_if1_mac | lower | replace('-',':') }}"
         pci_address: "0002:00:02.0"
         link: link21
         model: azure-mlx-40g
       port2:
         # dut2_instance/p1 - 40GE port2 on Mellanox NIC.
-        mac_address: {{ dut2_if2_mac }}
+        mac_address: "{{ dut2_if2_mac | lower | replace('-',':') }}"
         pci_address: "0003:00:02.0"
         link: link2
         model: azure-mlx-40g
