C-Dash: Add search in tests
Change-Id: Ia250c4b4e299d48bc68cf01e65fe37a281047060
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/csit.infra.dash/app/cdash/templates/base_layout.jinja2
+++ b/csit.infra.dash/app/cdash/templates/base_layout.jinja2
@@ -52,6 +52,11 @@
         </a>
       </p>
       <p>
+        <a href="/search/" class="btn btn-primary fw-bold w-25">
+          {{ search_title }}
+        </a>
+      </p>
+      <p>
         <a href="/cdocs/" class="btn btn-primary fw-bold w-25">
           Documentation
         </a>
